inclusão de novos campos na tabela e internacionalização

--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -8,7 +8,8 @@
       <img class="avatar" src="../assets/images/avatar.png" alt="Avatar" />
       <div style="display: flex; flex-direction:column;">
         <span class="name-user">{{user?.username}}</span>
-        <!--<span class="designation">{{user.matricula}} - {{user.funcao}}</span>-->
+        <!-- <span class="fi fi-gr"></span> <span class="fi fi-gr fis"></span> -->
+        <!-- <a type="button" style="color: black;" (click)="cancelNc(ncListDTO.nc)" pTooltip="Cancelar NC"><i class="flag flag-united-states"></i></a> -->
       </div>
     </div>
   </ng-template>
