flags de mudança de idioma e traduções

--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -1,5 +1,5 @@
 <p-confirmDialog acceptLabel="sim" rejectLabel="não" [style]="{width: '50vw'}" [baseZIndex]="10000"></p-confirmDialog>
-<p class="title">Início</p>
+<p class="title">InícioA</p>
 <p class="subtitle">Visualize ou crie não conformidades</p>
 
 <span class="p-input-icon-left">
