--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -8,8 +8,14 @@
       <img class="avatar" src="../assets/images/avatar.png" alt="Avatar" />
       <div style="display: flex; flex-direction:column;">
         <span class="name-user">{{user?.username}}</span>
-        <!-- <span class="fi fi-gr"></span> <span class="fi fi-gr fis"></span> -->
-        <!-- <a type="button" style="color: black;" (click)="cancelNc(ncListDTO.nc)" pTooltip="Cancelar NC"><i class="flag flag-united-states"></i></a> -->
+        <div style="display: flex; flex-direction:row;">
+          <a style="margin-right: 5px;" type="button" style="color: black;" (click)="changeLanguage('pt')" ><span style="margin-right: 5px;" class="flag-icon flag-icon-br"></span></a>  
+          <a type="button" style="color: black;" (click)="changeLanguage('en')"><span class="flag-icon flag-icon-us"></span></a>  
+          
+        </div>
+
+        
+        
       </div>
     </div>
   </ng-template>
