--- a/src/app/pages/ncs/about/proposal/proposal.component.html
+++ b/src/app/pages/ncs/about/proposal/proposal.component.html
@@ -246,7 +246,7 @@
                             </ng-template>
                             <ng-template pTemplate="body" let-contact let-i="rowIndex">
                                 <tr>
-                                    <td>{{ contact.name }}</td>
+                                    <td>{{ contact.username }}</td>
                                     <td>{{ contact.email }}</td>
                                     <td>{{ contact.type }}</td>
                                 </tr>
@@ -272,13 +272,7 @@
                 </p>
             </div>
         </div>
-        <div class="d-flex justify-content-end align-items-center mb-3">
-    
-            <a href="/ncs/createProp/{{id}}" role="button" class="btn btn-dark">
-                Criar Proposta
-                <i class="bi bi-file-earmark-medical"></i>
-            </a>
-        </div>
+       
     </div>
     <div class="image-box d-flex align-items-center justify-content-center mt-5">
         <img src="../../../../../../../assets/images/Ilustrações2.svg" alt="" />
