--- a/src/app/pages/ncs/create-prop/create-prop-header/create-prop-header.component.html
+++ b/src/app/pages/ncs/create-prop/create-prop-header/create-prop-header.component.html
@@ -1,7 +1,7 @@
 <div class="header-create-nc">
     <div class="p-0">
         <div class="d-flex">
-            <button type="button" class="btn btn-dark">
+            <button routerLink="/ncs/about/{{id}}" type="button" class="btn btn-dark">
                 <i class="pi pi-home"></i>
                 Voltar Para Nc
             </button>
@@ -24,7 +24,7 @@
                 Dados da NC
                 <i class="bi bi-file-earmark-medical"></i>
             </button>
-            <button type="button" class="btn btn-dark mr-2">
+            <button (click)="saveProp()" type="button" class="btn btn-dark mr-2">
             Salvar
             <i class="pi pi-save"></i>
         </button>
