--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
@@ -6,19 +6,19 @@
         <p>Quando ocorre falta/excesso de insumos ou estes são de má qualidade.</p>
 
         <div class="form-check pl-0">
-            <p-checkbox [(ngModel)]="this.propService.propSolution.lackMaterials" value="Falta de Insumos"></p-checkbox>
+            <p-checkbox [(ngModel)]="this.propService.propSolution.lack_materials" value="Falta de Insumos"></p-checkbox>
             <label class="form-check-label ml-1">Falta de Insumos</label>
         </div>
         <div class="form-check pl-0">
-            <p-checkbox [(ngModel)]="this.propService.propSolution.excessMaterials" value="Excesso de Insumos"></p-checkbox>
+            <p-checkbox [(ngModel)]="this.propService.propSolution.excess_materials" value="Excesso de Insumos"></p-checkbox>
             <label class="form-check-label ml-1">Excesso de Insumos</label>
         </div>
         <div class="form-check pl-0">
-            <p-checkbox [(ngModel)]="this.propService.propSolution.lowQualityMaterials" value="Matéria prima de má qualidade"></p-checkbox>
+            <p-checkbox [(ngModel)]="this.propService.propSolution.low_quality_materials" value="Matéria prima de má qualidade"></p-checkbox>
             <label class="form-check-label ml-1">Matéria prima de má qualidade</label>
         </div>
         <p class="my-3 fw-bold fs-6">Acrescente e detalhe abaixo outras informações pertinentes:</p>
-        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.materialDescription" [modules]="{counter: {container: '#counter',unit: 'character'}}">
+        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.material_description" [modules]="{counter: {container: '#counter',unit: 'character'}}">
         </p-editor>
         <div id="counter" class="text-end">0</div>
     </div>
@@ -29,19 +29,19 @@
         <p>Quando há erros, falta ou excesso de parâmetros de inspeção, não atingimento de metas ou outras informações de medição.</p>
 
         <div class="form-check pl-0">
-            <p-checkbox [(ngModel)]="this.propService.propSolution.lackParameters" value="Falta de Parâmetros"></p-checkbox>
+            <p-checkbox [(ngModel)]="this.propService.propSolution.lack_parameters" value="Falta de Parâmetros"></p-checkbox>
             <label class="form-check-label ml-1">Falta de Parâmetros</label>
         </div>
         <div class="form-check pl-0">
-            <p-checkbox [(ngModel)]="this.propService.propSolution.excessParameters" value="Excesso de Parâmetros"></p-checkbox>
+            <p-checkbox [(ngModel)]="this.propService.propSolution.excess_parameters" value="Excesso de Parâmetros"></p-checkbox>
             <label class="form-check-label ml-1">Excesso de Parâmetros</label>
         </div>
         <div class="form-check pl-0">
-            <p-checkbox [(ngModel)]="this.propService.propSolution.lackMaterials" value="Não atingimento de metas"></p-checkbox>
+            <p-checkbox [(ngModel)]="this.propService.propSolution.non_achievement_goals" value="Não atingimento de metas"></p-checkbox>
             <label class="form-check-label ml-1">Não atingimento de metas</label>
         </div>
         <p class="my-3 fw-bold fs-6">Acrescente e detalhe abaixo outras informações pertinentes:</p>
-        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.measurementDescription" [modules]="{counter: {container: '#counter1',unit: 'character'}}">
+        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.measurement_description" [modules]="{counter: {container: '#counter1',unit: 'character'}}">
         </p-editor>
         <div id="counter1" class="text-end">0</div>
     </div>
@@ -51,7 +51,7 @@
         </h1>
         <p>Quando há ausência de métodos formais ou estes são inadequados, incompletos, incorretos ou não foram divulgados adequadamente. Também se aplica quando: há falta de inspeção, ausência ou falha em sistemas automatizados, má gestão como um todo.</p>
 
-        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.methodDescription" [modules]="{counter: {container: '#counter3',unit: 'character'}}">
+        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.method_description" [modules]="{counter: {container: '#counter3',unit: 'character'}}">
         </p-editor>
         <div id="counter3" class="text-end">0</div>
         <div class="d-flex mt-4">
@@ -123,10 +123,10 @@
         </h1>
         <p>Quando o colaborador desrespeita procedimentos, desconhece a maneira correta de executar o trabalho (falta de treinamento), ou o faz de maneira inadequada (com pressa, imprudência, etc) ou descompromissada (falta de responsabilidade, motivação, etc).</p>
         <div class="form-check pl-0 my-2">
-            <p-checkbox [(ngModel)]="this.propService.propSolution.runTraining" value="Executar treinamento"></p-checkbox>
+            <p-checkbox [(ngModel)]="this.propService.propSolution.run_training" value="Executar treinamento"></p-checkbox>
             <label class="form-check-label ml-1">Executar treinamento</label>
         </div>
-        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.manPowerDescription" [modules]="{counter: {container: '#counter4',unit: 'character'}}">
+        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.man_power_description" [modules]="{counter: {container: '#counter4',unit: 'character'}}">
         </p-editor>
         <div id="counter4" class="text-end">0</div>
     </div>
@@ -135,7 +135,7 @@
             Meio Ambiente
         </h1>
         <p class="mb-3">Quando o problema está relacionado a condições ambientais (poluição, temperatura, ruido, luminosidade, etc) ou a condições de infraestrutura (espaço físico, mobiliário, etc).</p>
-        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.environmentDescription" [modules]="{counter: {container: '#counter5',unit: 'character'}}">
+        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.environment_description" [modules]="{counter: {container: '#counter5',unit: 'character'}}">
         </p-editor>
         <div id="counter5" class="text-end">0</div>
     </div>
@@ -145,7 +145,7 @@
         </h1>
         <p>Quando há ausência, obsolescência, má regulagem, quebra ou outros problemas com os equipamentos, inclusive de informática. Se aplica também nas falhas de manuntenção corretiva ou preventiva destes equipamentos.</p>
 
-        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.machineDescription" [modules]="{counter: {container: '#counter6',unit: 'character'}}">
+        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.machine_description" [modules]="{counter: {container: '#counter6',unit: 'character'}}">
         </p-editor>
         <div id="counter6" class="text-end">0</div>
         <div class="d-flex mt-4">
@@ -185,7 +185,7 @@
             Efeito
         </h1>
         <p class="mb-3">Quando há ausência, obsolescência, má regulagem, quebra ou outros problemas com os equipamentos, inclusive de informática. Se aplica também nas falhas de manuntenção corretiva ou preventiva destes equipamentos.</p>
-        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.effectDescription" [modules]="{counter: {container: '#counter7',unit: 'character'}}">
+        <p-editor [style]="{'height':'210px'}" [(ngModel)]="this.propService.propSolution.effect_description" [modules]="{counter: {container: '#counter7',unit: 'character'}}">
         </p-editor>
         <div id="counter7" class="text-end">0</div>
     </div>
