--- a/src/app/pages/ncs/create-prop/steps/step5/review-infomations.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step5/review-infomations.component.html
@@ -246,7 +246,7 @@
                     </ng-template>
                     <ng-template pTemplate="body" let-contact let-i="rowIndex">
                         <tr>
-                            <td>{{ contact.name }}</td>
+                            <td>{{ contact.username }}</td>
                             <td>{{ contact.email }}</td>
                             <td>{{ contact.type }}</td>
                         </tr>
