correções de bugs criar nc

--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -10,8 +10,9 @@
         <span class="name-user">{{user?.username}}</span>
         <div style="display: flex; flex-direction:row;">
           <a style="margin-right: 5px;" type="button" style="color: black;" (click)="changeLanguage('pt')" ><span style="margin-right: 5px;" class="flag-icon flag-icon-br"></span></a>  
-          <a type="button" style="color: black;" (click)="changeLanguage('en')"><span class="flag-icon flag-icon-us"></span></a>  
-          
+          <a style="margin-right: 5px;" type="button" style="color: black;" (click)="changeLanguage('en')"><span style="margin-right: 5px;" class="flag-icon flag-icon-us"></span></a>  
+          <a type="button" style="color: black;" (click)="changeLanguage('us')"><span class="flag-icon flag-icon-es"></span></a>  
+
         </div>
 
         
