--- a/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.html
+++ b/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.html
@@ -27,7 +27,7 @@
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-calendar-week mr-1"></i>
         <div>
-          <span class="info-titulo">Data de Fechamento</span>
+          <span class="info-titulo">Prazo de Fechamento</span>
           <br/>
           <span class="info-dados">
             {{formato_brasileiro(aboutSrvc.nc?.data_fechamento)}}
