--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -13,11 +13,13 @@
         <i class="pi pi-history"></i> ultima atualização:
         {{ returnUpdateTime() }}
       </p>
-      <a href="ncs/import" class="text-decoration-none">
-        <button pButton pRipple type="button" class="btn btn-dark">
-          Atualizar Cadastros
-          <i class="pi pi-download"></i>
-        </button>
+      <a      target="_blank"
+              href="ncs/import"
+              role="button"
+              class="btn btn-dark"
+      >
+        Atualizar Cadastros
+        <i class="pi pi-download" id="icon-button"></i>
       </a>
     </div>
   </div>
