--- a/src/app/pages/ncs/create/steps/step4/revisar-info.component.html
+++ b/src/app/pages/ncs/create/steps/step4/revisar-info.component.html
@@ -39,7 +39,7 @@
       <div class="d-flex justify-content-between accordion">
         <p>
           <i class="bi bi-file-earmark-text"></i>
-          Identificação da NC
+          Destino da NC
         </p>
         <button class="btn btn-dark red" (click)="goToStepById(0)">
           <i class="bi bi-pencil mr-1"></i>
@@ -73,7 +73,7 @@
       <div class="d-flex justify-content-between accordion">
         <p>
           <i class="bi bi-file-earmark-text"></i>
-          Identificação da NC
+          Destino da NC
         </p>
         <button class="btn btn-dark red" (click)="goToStepById(2)">
           <i class="bi bi-pencil mr-1"></i>
