--- a/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint.component.html
+++ b/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint.component.html
@@ -1,7 +1,7 @@
 <div class="content">
   <div *ngIf="!nonComplicanceService.hasProduct()">
     <h3>Ponto de Controle</h3>
-    <app-waiting-product></app-waiting-product>
+    <app-waiting-product titleFigure="Aguardando dados do ponto de controle"></app-waiting-product>
   </div>
   <div *ngIf="nonComplicanceService.hasProduct()">
     <div class="content">
