--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point.component.html
@@ -1,7 +1,7 @@
 <div class="content">
   <div *ngIf="!nonComplianceService.hasProduct()">
     <h3>Ponto de Rejeição</h3>
-    <app-waiting-product></app-waiting-product>
+    <app-waiting-product titleFigure="Aguardando dados do ponto de rejeição"></app-waiting-product>
   </div>
 
   <div *ngIf="nonComplianceService.hasProduct()" class="mt-3 reject-point">
