hotfix: ajeita layout revisar info nc

--- a/src/app/pages/ncs/create/steps/step3/contacts.component.html
+++ b/src/app/pages/ncs/create/steps/step3/contacts.component.html
@@ -13,7 +13,7 @@
     <button iconPos="right" class="btn btn-dark" (click)="showAddContacts()">
       Adicionar Contato<i class="pi pi-plus"></i>
     </button>
-  </div>z
+  </div>
 </div>
 
 <div class="card">
