--- a/src/app/pages/ncs/create/steps/step4/stakeholders/stakeholders.component.html
+++ b/src/app/pages/ncs/create/steps/step4/stakeholders/stakeholders.component.html
@@ -9,7 +9,7 @@
         </ng-template>
         <ng-template pTemplate="body" let-contact let-i="rowIndex">
             <tr>
-                <td>{{ contact.name }}</td>
+                <td>{{ contact.username }}</td>
                 <td>{{ contact.email }}</td>
                 <td>{{ contact.type }}</td>
             </tr>
