--- a/src/app/pages/ncs/create/steps/step2/product/product-info/product-info.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product-info/product-info.component.html
@@ -21,7 +21,7 @@
         <input
                 [(ngModel)]="nonComplianceService.nc.quant_nc"
                 name="amountNC"
-                type="text"
+                type="number"
                 pInputText
                 placeholder="Digite"
                 class="p-inputtext-sm input"
@@ -32,7 +32,7 @@
         <input
                 [(ngModel)]="nonComplianceService.nc.quant_total"
                 name="amountTotal"
-                type="text"
+                type="number"
                 pInputText
                 placeholder="Digite"
                 class="p-inputtext-sm input"
