--- a/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
@@ -163,7 +163,7 @@
       Evidências
     </h2>
     <p-carousel
-      [value]="returnFile('pontoControle')"
+      [value]="returnFile('evidenciasNc')"
       [numVisible]="3"
       [numScroll]="3"
       [showIndicators]="false"
