--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -88,18 +88,28 @@
         <ng-template let-brand pTemplate="  ">
           <div>
             <span class="auto-complete-title">{{ brand.corporate_name }}</span>
-            <div class="d-flex justify-content-between">
-              <div>
+            <div class="d-flex">
+              <div class="mr-4" *ngIf="this.nonComplicanceService.nc.tipos_parceiro_item == 'Interno'">
+                <span class="auto-complete-label">SETOR</span><br />
+                <span class="auto-complete-item">{{ brand.name }}</span>
+              </div>
+              <div class="mr-4" *ngIf="this.nonComplicanceService.nc.tipos_parceiro_item != 'Interno'">
                 <span class="auto-complete-label">CÓDIGO</span><br />
                 <span class="auto-complete-item">{{ brand.code }}</span>
               </div>
-              <div>
-                <span class="auto-complete-label">NOME DO CONTATO</span><br />
+              <div class="mr-4" *ngIf="this.nonComplicanceService.nc.tipos_parceiro_item == 'Interno'">
+                <span class="auto-complete-label">NOME DO RESP.</span><br />
                 <span class="auto-complete-item">{{
                   brand.responsible_name
                 }}</span>
               </div>
-              <div>
+              <div class="mr-4" *ngIf="this.nonComplicanceService.nc.tipos_parceiro_item != 'Interno'">
+                <span class="auto-complete-label">NOME</span><br />
+                <span class="auto-complete-item">{{
+                  brand.responsible_name
+                  }}</span>
+              </div>
+              <div class="mr-4">
                 <span class="auto-complete-label">E-MAIL</span><br />
                 <span class="auto-complete-item">{{
                   brand.responsible_email
