--- a/src/app/pages/ncs/create/steps/step3/contacts.component.html
+++ b/src/app/pages/ncs/create/steps/step3/contacts.component.html
@@ -22,7 +22,7 @@
       <tr>
         <th>Nome</th>
         <th>E-mail</th>
-        <th>Tipo de Contato</th>
+        <th>Setor</th>
         <th></th>
       </tr>
     </ng-template>
@@ -30,7 +30,7 @@
       <tr>
         <td>{{ contact.username }}</td>
         <td>{{ contact.email }}</td>
-        <td>{{ contact.type }}</td>
+        <td>{{ contact.sector?.name }}</td>
         <td *ngIf="i >= 4">
 <!--          <button
             pButton
@@ -85,8 +85,8 @@
                   <span class="auto-complete-item">{{ contact.email }}</span>
                 </div>
                 <div class="px-5">
-                  <span class="auto-complete-label">TIPO DE CONTATO</span><br />
-                  <span class="auto-complete-item">{{ contact.ctype }}</span>
+                  <span class="auto-complete-label">SETOR</span><br />
+                  <span class="auto-complete-item">{{ contact.sector.name }}</span>
                 </div>
               </div>
             </div>
@@ -111,7 +111,7 @@
           <tr>
             <th>Nome</th>
             <th>E-mail</th>
-            <th>Tipo de Contato</th>
+            <th>Setor</th>
             <th></th>
           </tr>
         </ng-template>
@@ -119,7 +119,7 @@
           <tr>
             <td>{{ contact.name }}</td>
             <td>{{ contact.email }}</td>
-            <td>{{ contact.cType }}</td>
+            <td>{{ contact.sector.name }}</td>
             <td>
               <button
                 pButton
