--- a/src/app/pages/ncs/create/steps/step4/stakeholders/stakeholders.component.html
+++ b/src/app/pages/ncs/create/steps/step4/stakeholders/stakeholders.component.html
@@ -4,14 +4,14 @@
             <tr>
                 <th>Nome</th>
                 <th>E-mail</th>
-                <th>Tipo de Contato</th>
+                <th>Setor</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-contact let-i="rowIndex">
             <tr>
                 <td>{{ contact.username }}</td>
                 <td>{{ contact.email }}</td>
-                <td>{{ contact.type }}</td>
+                <td>{{ contact.sector.name }}</td>
             </tr>
         </ng-template>
     </p-table>
