--- a/src/app/pages/ncs/create/steps/step3/contacts.component.html
+++ b/src/app/pages/ncs/create/steps/step3/contacts.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 
 <div class="d-flex">
   <div class="col-8">
@@ -22,23 +23,23 @@
       <tr>
         <th>Nome</th>
         <th>E-mail</th>
-        <th>Setor</th>
+        <th>Tipo de Contato</th>
         <th></th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-contact let-i="rowIndex">
       <tr>
-        <td>{{ contact.username }}</td>
+        <td>{{ contact.name }}</td>
         <td>{{ contact.email }}</td>
-        <td>{{ contact.sector?.name }}</td>
+        <td>{{ contact.type }}</td>
         <td *ngIf="i >= 4">
-<!--          <button
+          <button
             pButton
             type="button"
             icon="pi pi-pencil"
             class="p-button-secondary p-button-text"
             (click)="editContact(contact)"
-          ></button>-->
+          ></button>
           <button
             pButton
             type="button"
@@ -64,7 +65,7 @@
   </ng-template>
   <ng-template pTemplate="content">
     <div class="d-flex pb-2">
-      <div class="col-10 pl-0">
+      <div class="col-9 pl-0">
         <p-autoComplete
           placeholder="Busque por nome ou e-mail..."
           [(ngModel)]="selectedContact"
@@ -78,28 +79,28 @@
         >
           <ng-template let-contact pTemplate="item">
             <div>
-              <span class="auto-complete-title">{{ contact.username }}</span>
+              <span class="auto-complete-title">{{ contact.name }}</span>
               <div class="d-flex text-start">
                 <div>
                   <span class="auto-complete-label">E-MAIL</span><br />
                   <span class="auto-complete-item">{{ contact.email }}</span>
                 </div>
                 <div class="px-5">
-                  <span class="auto-complete-label">SETOR</span><br />
-                  <span class="auto-complete-item">{{ contact.sector.name }}</span>
+                  <span class="auto-complete-label">TIPO DE CONTATO</span><br />
+                  <span class="auto-complete-item">{{ contact.type }}</span>
                 </div>
               </div>
             </div>
           </ng-template>
         </p-autoComplete>
       </div>
-<!--      <button
+      <button
         type="button"
         class="btn btn-dark col-3"
         (click)="createNewContact()"
       >
         Criar Contato <i class="pi pi-user-plus"></i>
-      </button>-->
+      </button>
     </div>
     <div class="d-flex mt-3">
       <i class="pi pi-users" style="font-size: 2rem"></i>
@@ -111,7 +112,7 @@
           <tr>
             <th>Nome</th>
             <th>E-mail</th>
-            <th>Setor</th>
+            <th>Tipo de Contato</th>
             <th></th>
           </tr>
         </ng-template>
@@ -119,7 +120,7 @@
           <tr>
             <td>{{ contact.name }}</td>
             <td>{{ contact.email }}</td>
-            <td>{{ contact.sector.name }}</td>
+            <td>{{ contact.type }}</td>
             <td>
               <button
                 pButton
