--- a/src/app/pages/ncs/create/steps/step4/stakeholders/stakeholders.component.html
+++ b/src/app/pages/ncs/create/steps/step4/stakeholders/stakeholders.component.html
@@ -1,17 +1,17 @@
 <div class="card">
-    <p-table [value]="this.nonComplicanceService.allContacts">
+    <p-table [value]="this.nonComplicanceService.nc.contacts">
         <ng-template pTemplate="header">
             <tr>
                 <th>Nome</th>
                 <th>E-mail</th>
-                <th>Setor</th>
+                <th>Tipo de Contato</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-contact let-i="rowIndex">
             <tr>
-                <td>{{ contact.username }}</td>
+                <td>{{ contact.name }}</td>
                 <td>{{ contact.email }}</td>
-                <td>{{ contact.sector.name }}</td>
+                <td>{{ contact.type }}</td>
             </tr>
         </ng-template>
     </p-table>
