--- a/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
@@ -56,7 +56,7 @@
     </div>
 </div>
 <div class="card">
-    <p-table [value]="propService.propSolution.actionPlan">
+    <p-table [value]="propService.propSolution.actionPlans">
         <ng-template pTemplate="header">
             <tr>
                 <th>Descrição</th>
