--- a/src/app/pages/ncs/create-prop/steps/step4/notification.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step4/notification.component.html
@@ -4,15 +4,15 @@
     <div class="cabecalho">
       <h1>Emitir Notificações</h1>
       <p>
-        Visualize e adicione contatos a serem notificados acerca do andamento desta NC. Por padrão, são adicionados contatos já incluidos nos passos anteriores.
+        Visualize os contatos a serem notificados acerca do andamento desta NC. Por padrão, são adicionados contatos já incluidos nos passos anteriores.
       </p>
     </div>
   </div>
-  <div class="col-4 d-flex justify-content-end align-items-center">
+  <!--<div class="col-4 d-flex justify-content-end align-items-center">
     <button iconPos="right" class="btn btn-dark" (click)="showAddContacts()">
       Adicionar Contato<i class="pi pi-plus"></i>
     </button>
-  </div>
+  </div>-->
 </div>
 
 <div class="card">
